crates/stef-compiler/tests/inputs/validate/enum_unnamed_tuple_too_large.stef
enum Sample {
    One @1,
    Two((u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8) @1) @2,
}
