crates/stef-compiler/tests/inputs/invalid/struct_unnamed_dup_id.stef
struct Sample(string @1, string @1)
